feat: add categories
