# src/routes/label.routes.ts
@@ -9,6 +9,13 @@ router.get("/", LabelController.getLabels);
 router.get("/:id", LabelController.getLabelById);
 router.get("/name/:name", LabelController.getLabelByName);
 router.get("/category/:categoryId", LabelController.getLabelsByCategory);
+router.post(
+  "/",
+  authenticateToken,
+  authorizeRoles(["user", "moderator", "admin"]),
+  validate(labelNameValidation),
+  LabelController.createLabel,
+);
 router.patch(
   "/:id",
   authenticateToken,
