# src/types/label.types.ts
@@ -1,0 +1,9 @@
+export type CreateLabel = {
+  name: string;
+  categoryId: string;
+};
+
+export type UpdateLabel = {
+  name?: string;
+  categoryId?: string;
+};
