# src/validations/label.validation.ts
@@ -13,4 +13,8 @@ export const labelNameValidation = z.object({
     .max(100, {
       message: "El nombre de la etiqueta debe tener como máximo 100 caracteres",
     }),
+  categoryId: z.string({
+    required_error: "El ID de la categoría es requerido",
+    invalid_type_error: "El ID de la categoría debe ser una cadena de texto",
+  }),
 });
